Fix a test failure on the Windows platform.